<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012 Dirk Van Haerenborgh (vhdirk)

	This file is part of Dommel Monitor.
	
	Dommel Monitor is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	Dommel Monitor is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License
	along with Dommel Monitor. If not, see <http://www.gnu.org/licenses/>.
	
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Simple strings. -->
    <string name="app_name">dommel</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_donate">Donate</string>
    <string name="lbl_volumeUsed">Volume used: </string>
    <string name="lbl_daysLeft">Days: </string>
    <string name="lbl_resetDate">Reset date: </string>
    <string name="lbl_lastUpdate">Last update: </string>
    
    <string name="exception_message">Could not connect. Make sure your internet connection is working and your credentials are correct. [error: %s]</string>
    <string name="success_message">Usage data successfully updated.</string>
    
    <string name="megabyte"> MB</string>
    <plurals name="days_left">
        <item quantity="one">One day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
    
    <string name="credentials_preferences">Credentials</string>
    <string name="title_username_preference">Username</string>
    <string name="summary_username_preference">Username</string>
    <string name="dialog_title_username_preference">Username</string>
    <string name="title_password_preference">Password</string>
    <string name="summary_password_preference">Password</string>
    <string name="dialog_title_password_preference">Password</string>
    
    <string name="general_preferences">General</string>
    <string name="title_updateFrequency_preference">Auto update frequency</string>       
        
    <string name="widget_configure_instructions">This text will be shown before the date in our example widget.</string>
    
    <string name="widget_text_format"><xliff:g id="prefix">%1$s</xliff:g>: <xliff:g id="time">%2$s</xliff:g></string>
    <string name="widget_action">Widget tap action</string>
    
    <string name="settings_widget_action">%s when the widget is tapped.</string>
    <string name="settings_widget_background">Widget background color: %s</string>
    <string name="widget_background">Widget color</string>
    <string name="widget_preferences">Widget preferences</string>
    
    <string name="author_name">Dirk Van Haerenborgh</string>
    
    <string name="about_preferences">About</string>
    <string name="title_author_preference">Author</string>
    <string name="text_donate_preference">Express your support and help development</string>
    <string name="title_donate_preference">Donate</string>

    <string name="url_author_page">http://qvex.blogspot.com</string>
    <string name="url_donate_page">market://details?id=net.qvex.dommel_donate</string>
        
</resources>